{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 671,
  "lineage": "f1ba308c-299a-679c-08b7-79b201301a5f",
  "resources": [
    {
      "module": "module.clickhouse_ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "clickhouse_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07cef98a7cbb3ffe6",
            "arn": "arn:aws:ec2:us-west-1:767397811841:instance/i-0305f1431582c1dbd",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0305f1431582c1dbd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "capstone-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0066cdeb319dd7a0e",
            "private_dns": "ip-172-31-25-114.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.25.114",
            "public_dns": "ec2-13-57-193-66.us-west-1.compute.amazonaws.com",
            "public_ip": "13.57.193.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0badc3c4745d981b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "clickhouse-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f3f7405f11a3d8c1",
            "tags": {
              "Name": "ClickHouse-Server"
            },
            "tags_all": {
              "Name": "ClickHouse-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0850b85028cfbedec"
            ]
          },
          "dependencies": [
            "module.clickhouse_ec2_instance.aws_key_pair.generated_key",
            "module.clickhouse_ec2_instance.aws_security_group.clickhouse_sg",
            "module.clickhouse_ec2_instance.data.aws_ami.ubuntu",
            "module.clickhouse_ec2_instance.tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "module": "module.clickhouse_ec2_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "clickhouse_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:767397811841:security-group/sg-0850b85028cfbedec",
            "description": "Security group for Clickhouse EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0850b85028cfbedec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8124,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8124
              }
            ],
            "name": "clickhouse-security-group",
            "name_prefix": "",
            "owner_id": "767397811841",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "clickhouse-security-group"
            },
            "tags_all": {
              "Name": "clickhouse-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d1221c4e557d6d4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.flask_ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "flask_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07cef98a7cbb3ffe6",
            "arn": "arn:aws:ec2:us-west-1:767397811841:instance/i-0a2b72a4dfc6db912",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a2b72a4dfc6db912",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "capstone-key1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-000dfe0c7f2e6b988",
            "private_dns": "ip-172-31-17-54.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.54",
            "public_dns": "ec2-54-241-194-151.us-west-1.compute.amazonaws.com",
            "public_ip": "54.241.194.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05f2f428c783261c1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "flask-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f3f7405f11a3d8c1",
            "tags": {
              "Name": "Flask-Server"
            },
            "tags_all": {
              "Name": "Flask-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0707bc8e6921cbd62"
            ]
          },
          "dependencies": [
            "module.clickhouse_ec2_instance.aws_instance.clickhouse_server",
            "module.clickhouse_ec2_instance.aws_key_pair.generated_key",
            "module.clickhouse_ec2_instance.aws_security_group.clickhouse_sg",
            "module.clickhouse_ec2_instance.data.aws_ami.ubuntu",
            "module.clickhouse_ec2_instance.local_file.private_key",
            "module.clickhouse_ec2_instance.tls_private_key.ssh_key",
            "module.flask_ec2_instance.aws_key_pair.generated_key",
            "module.flask_ec2_instance.aws_security_group.flask_sg",
            "module.flask_ec2_instance.data.aws_ami.ubuntu",
            "module.flask_ec2_instance.tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "module": "module.flask_ec2_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "flask_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:767397811841:security-group/sg-0707bc8e6921cbd62",
            "description": "Security group for flask EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0707bc8e6921cbd62",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "flask-security-group",
            "name_prefix": "",
            "owner_id": "767397811841",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "flask-security-group"
            },
            "tags_all": {
              "Name": "flask-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d1221c4e557d6d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.clickhouse_ec2_instance.aws_instance.clickhouse_server",
            "module.clickhouse_ec2_instance.aws_key_pair.generated_key",
            "module.clickhouse_ec2_instance.aws_security_group.clickhouse_sg",
            "module.clickhouse_ec2_instance.data.aws_ami.ubuntu",
            "module.clickhouse_ec2_instance.local_file.private_key",
            "module.clickhouse_ec2_instance.tls_private_key.ssh_key"
          ]
        }
      ]
    }
  ]
}